--- a/_infra/docker/docker-compose.yml
+++ b/_infra/docker/docker-compose.yml
@@ -4,3 +4,9 @@ services:
     build: ./mysql
     ports:
       - 5000:3306
+  fcm-nginx:
+    build: ./nginx
+    ports:
+      - 5001:80
+    volumes:
+      - ./nginx/html:/var/www/html
